アイテム名修正

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -23,7 +23,7 @@
     .main-contents
       .main-contents__top
         .main-contents__header--name
-          レディース新着アイテム
+          新着アイテム
         =link_to "もっと見る ＞", class: "main-contents__header--more"
       .main-contents__goods
         %ul
@@ -37,7 +37,7 @@
                       %span= product.price
                     = image_tag product.image_url if product.image.present?
                   .contents-item__index
-                    .contents-item__index--name 
+                    .contents-item__index--name
                       %span= product.name
       .main-contents__header
         .main-contents__header--name
@@ -52,7 +52,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -67,7 +67,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -82,7 +82,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
   .top-nav
     .Category
@@ -111,8 +111,8 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
-                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
+                  .contents-item__index--name
+                    %span
           %li
             .main-contents-box
               = link_to root_path, class: "contents-item" do
@@ -120,7 +120,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -129,7 +129,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -138,7 +138,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -147,7 +147,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -177,7 +177,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -192,7 +192,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
 = render 'layouts/footer'
 = render 'devise/shared/red-btn'
