--- a/app/assets/stylesheets/product/product-details.scss
+++ b/app/assets/stylesheets/product/product-details.scss
@@ -240,6 +240,8 @@
         font-size: 14px;
         background: #fff6de;
       }
+    }
+    form {
       #comment_comment{
         margin-top: 8px;
         width: 100%;
