パンくず、いいねカウント修正

--- a/app/assets/stylesheets/devise/_header_footer.scss
+++ b/app/assets/stylesheets/devise/_header_footer.scss
@@ -14,7 +14,7 @@
     }
   }
   .body-foot{
-    margin:0 auto;
+    margin: 0 auto;
     width: 700px;
     max-width: 50%;
     //height: 140px;
@@ -103,7 +103,7 @@
     }
   }
   .body-foot{
-    margin:0 auto;
+    margin:110px auto 0;
     width: 700px;
     max-width: 50%;
     height: 170px;
