--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -199,7 +199,7 @@
       }
     }
     .body-foot{
-      margin:0 auto;
+      margin:120px auto 0;
       padding: 40px 0;
       position: relative;
       .footer{
