--- a/app/views/devise/shared/_login-header.html.haml
+++ b/app/views/devise/shared/_login-header.html.haml
@@ -1,7 +1,7 @@
 %header.top-content
   .top-main
     .top-main-face
-      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"),"https://www.mercari.com/jp/"
+      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"), root_path
       %form.searchbox
         %input.texts{type: "search", name: "keyword", placeholder: "Do you serach for anything?", value: ""}
         %button.glass
