--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -1,5 +1,7 @@
 .body-side
   =render "devise/shared/login-header"
+  - breadcrumb :edit
+  = render "layouts/breadcrumbs"
   .parent
     =render "layouts/side-barMypage"
     .credit-box
