--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -112,7 +112,7 @@
                     %span ¥1,000
                 .contents-item__index
                   .contents-item__index--name
-                    %span
+                    %span テスト
           %li
             .main-contents-box
               = link_to root_path, class: "contents-item" do
